# umx 1.8.0 (Bleeding edge - expected to drop May 2017, R 3.4.0 (You Stupid Darkness)
* *TIP*: umxAPA can format lots of things for you: from effects in lm -try it out!
* NEW: umxACEcov now working!
	* older versions worked with 1 DV only, couldn't handle multivariate means, had poor start values.
* DOCUMENT logic.MxModel Rd page for logic.MxModel.
* NEW: optimiser = “” parameter for umxACE.

# umx 1.7.5 (April 04 2017, R 3.3.3 Another Canoe)
* *TIP*: In twin models, mzData and dzData can contain unused variables: These will be removed for you!
* NEW: umxVersion (returns mxVersion() + umx version).
* IMPROVED: umxACE start values much better for univariate models.
* NEWFEATURES: umx_make_TwinData
	* Use variance input
	* Option to set seed
	* Add varName to datasets
	* nThresh to threhold the created variables, and return as mxFactors
	* Surface the empirical parameter of mvrnorm
	* More flexible: Leave out any one of A, C, or E.
	* omit nDZPairs to get equal numbers
	* Option to allow A+C+E ≠ 1
	* Full set of examples
	* NOTE: umx_make_TwinData uses **variance** input. This was ambiguous previously.
	* Docs much improved.
* NEWFEATURES: install.OpenMx can install UVA parallel, travis latest (on mac) or opening the travis list.
	* BUGFIX: install.OpenMx had a broken URL, now corrected.
* NEWFEATURES: umxRAM can now be used in "sketch" mode, to plot demos without data: just add the list of manifests as a character string to `data`.
	```splus
	m1 <- umxRAM("test", data = paste0("itemC", 1:4),
		umxPath(unique.bivariate = paste0("itemC", 1:4)),
		umxPath(var="X")
	)
	plot(m1)
	```
* NEWFEATURES: umx_cont_2_quantiles now allows returning cut points, better examples, level_names
	* BUGFIX: umx_cont_2_quantiles lowest threshold was empty
* NEWFEATURES: `umxAPA` now reports mode for factor data
* NEWFEATURES: Allow `umxLabel` to rename the returned model
* IMPROVED: Allow sep as a synonym for suffix in uxmACE, umxCP, umxIP