@@ -1,10 +1,8 @@
 ## Changes
-* Edited DESCRIPTION as requested. There is no citation as yet.
-* Bug-fixes install.OpenMx
 * Multiple enhancements to functions
 
 ## Test environments
-* OS X 10.12.4, R version 3.3.3
+* OS X 10.12.5, R version 3.4.0
 * Win (64-bit) R Under development (3.4.0 alpha (2017-03-31 r72459)
 * 64-bit Linux (Scientific Linux 6), R 3.3.3
 
